# Keads

./: .gitignore  README.md  WORKSPACE  docker-compose.yml  insomnia.json  nginx.conf  pom.xml  realm.json
Stream-service/: BUILD
Stream-service/src/src/main/java/org/keads/: Main.java
Stream-service/src/src/main/java/org/keads/track/: TrackController.java  TrackService.java
Stream-service/src/src/main/resources/: application.yml
analysis-service/: CMakeLists.txt  features.proto  main.cpp  main.py
analysis-service/feature_extraction/: acousticness.py  danceability.py  duration.py  energy.py  instrumentalness.py  key.py  liveness.py  loudness.py  mode.py  speechiness.py  tempo.py  valence.py
info-service/: pom.xml
metadata-service/: pom.xml
src/main/java/org/keads/: Main.java
stream-service/: pom.xml
stream-service/src/main/java/org/keads/track/: Info.java  InfoController.java  InfoService.java  KafkaConfig.java  MongoRepo.java  Playlist.java  PlaylistController.java  PlaylistRepo.java  PlaylistService.java  Track.java  TrackController.java  TrackService.java
stream-service/src/main/resources/: application.yml
